--- a/images/icomoon/demo-external-svg.html
+++ b/images/icomoon/demo-external-svg.html
@@ -115,6 +115,26 @@
                 <svg class="icon icon-twitter2"><use xlink:href="symbol-defs.svg#icon-twitter2"></use></svg><span class="name"> icon-twitter2</span>
             </div>
         </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-close_40px"><use xlink:href="symbol-defs.svg#icon-close_40px"></use></svg><span class="name"> icon-close_40px</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-email-black"><use xlink:href="symbol-defs.svg#icon-email-black"></use></svg><span class="name"> icon-email-black</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-name"><use xlink:href="symbol-defs.svg#icon-name"></use></svg><span class="name"> icon-name</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-telephone"><use xlink:href="symbol-defs.svg#icon-telephone"></use></svg><span class="name"> icon-telephone</span>
+            </div>
+        </div>
   </div>
 <script defer src="svgxuse.js"></script>
 </body>
