--- a/portfolio.html
+++ b/portfolio.html
@@ -303,6 +303,22 @@
             </li>
           </ul>
         </div>
+        <div class="form">
+          <form class="sign-up">
+            <b class="title-form">Подпишитесь на рассылку</b>
+            <div class="form-field">
+              <label for="user-email"></label>
+              <input
+                class="form-input"
+                type="email"
+                name="email"
+                id="user-email"
+                placeholder="E-mail"
+              />
+              <button class="button" type="submit">Подписаться</button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
