--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                     href="./images/icomoon/symbol-defs.svg#icon-envelope"
                   ></use>
                 </svg>
-                info@devstudio.com</a
-              >
+                info@devstudio.com
+              </a>
             </li>
             <li>
               <a href="+380961111111" class="info">
                 <svg class="contacts-icon" width="16" height="12">
                   <use href="./images/icomoon/symbol-defs.svg#icon-phone"></use>
                 </svg>
-                +380961111111</a
-              >
+                +380961111111
+              </a>
             </li>
           </ul>
         </nav>
@@ -493,11 +493,96 @@
             </li>
           </ul>
         </div>
+
+        <div class="form">
+          <form class="sign-up">
+            <b class="title-form">Подпишитесь на рассылку</b>
+            <div class="form-field">
+              <label for="user-email"></label>
+              <input
+                class="form-input"
+                type="email"
+                name="email"
+                id="user-email"
+                placeholder="E-mail"
+              />
+              <button class="button" type="submit">Подписаться</button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-close-btn" type="button" data-modal-close></button>
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg class="icon">
+            <use href="./images/icomoon/symbol-defs.svg#icon-close_40px"></use>
+          </svg>
+        </button>
+        <form class="form-modal">
+          <b class="title-modal">Оставьте свои данные, мы вам перезвоним</b>
+          <ul class="fields">
+            <li class="field">
+              <label for="user-name"> Имя</label>
+              <input
+                class="form-field"
+                type="text"
+                name="name"
+                id="user-name"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icomoon/symbol-defs.svg#icon-name"></use>
+              </svg>
+            </li>
+            <li class="field">
+              <label for="user-tel">Телефон</label>
+              <input class="form-field" type="text" name="tel" id="user-tel" />
+              <svg class="form-icon" width="18" height="18">
+                <use
+                  href="./images/icomoon/symbol-defs.svg#icon-telephone"
+                ></use>
+              </svg>
+            </li>
+            <li class="field">
+              <label for="user-mail">Почта</label>
+              <input
+                class="form-field"
+                type="email"
+                name="mail"
+                id="user-mail"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use
+                  href="./images/icomoon/symbol-defs.svg#icon-email-black"
+                ></use>
+              </svg>
+            </li>
+            <li class="field">
+              <label for="comments">Комментарий</label>
+              <textarea
+                name="comments"
+                rows="5"
+                id="comments"
+                placeholder="Введите текст"
+              ></textarea>
+            </li>
+          </ul>
+          <div class="checkbox">
+            <label class="field-label" for="checkbox">
+              <input
+                class="field-checkbox"
+                type="checkbox"
+                name="checkbox"
+                id="checkbox"
+                value="checkbox"
+              />
+              <svg class="checkbox-icon" width="16" height="15"></svg>
+              Соглашаюсь с рассылкой и принимаю
+              <a href="./" class="link">Условия договора</a>
+            </label>
+          </div>
+          <button class="button" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
